# bfcomp

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: asm.h  emit.h  jit.cc  jit.h  main.cc  util.h
src/core/: assembler.h  buffer.h  jit.h  x86.h
src/util/: print.h
